--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <div class="pw-container">
       <div class="pw-header">
         <div class="pw" id="pw">
-          <span id="pw">12#@$%GFH*()&^$#$%&*</span>
+          <span id="pw"></span>
           <button id="copy">Copy</button>
         </div>
+        <p id="para"></p>
       </div>
       <div class="pw-body">
         <div class="form-control">
           <label for="len">Password Length</label>
-          <input type="number" id="len" value="20" min="4" max="20" />
+          <input type="number" id="len" value="0" min="4" max="20" />
         </div>
         <div class="form-control">
           <label for="upper">Contain Uppercase Letters</label>
